--- a/character/character.html
+++ b/character/character.html
@@ -304,6 +304,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         </div>
         <div style="height: 48px;"></div>
         <!-- 광고 (기본적으로 표시) -->
+        <!--
         <div id="ad-unit-1" class="ad-unit">
             <ins class="adsbygoogle" style="display:block;" data-ad-format="fluid" data-ad-layout-key="-gc+3r+68-9q-29"
                 data-ad-client="ca-pub-5862324369257695" data-ad-slot="5373524213"></ins>
@@ -324,7 +325,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         </div>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        </script>-->
     </div>
 
     <!-- 스킬 섹션 -->
@@ -473,6 +474,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
 
         <div style="height: 30px;"></div>
         <!-- 광고 (기본적으로 표시) -->
+        <!--
         <div id="ad-unit-2" class="ad-unit">
             <ins class="adsbygoogle" style="display:block;" data-ad-format="fluid" data-ad-layout-key="-gc+3r+68-9q-29"
                 data-ad-client="ca-pub-5862324369257695" data-ad-slot="5373524213"></ins>
@@ -496,7 +498,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
-        <div style="height: 10px;"></div>
+        <div style="height: 10px;"></div>-->
     </div>
 
 
@@ -549,6 +551,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
     <!--</div>-->
 
     <!-- 최하단 광고-->
+    <!--
     <div style="height: 24px;"></div>
 
     <div id="ad-unit-bottom" class="AD-bottom"
@@ -560,7 +563,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
     <div style="height: 12px;"></div>
-    <!---->
+    
     <style>
         @media (max-width: 1440px) {
             .AD-bottom {
@@ -570,6 +573,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
     </style>
 
     <script>
+
         function showAdAndPush(id) {
             const el = document.getElementById(id);
             if (!el) return;
@@ -682,12 +686,13 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 });
             }, 2000);  // 광고 로딩 기다렸다가 1.5초 후 검사
 
-            /*
+            
             document.querySelectorAll(".adsbygoogle").forEach((adEl) => {
                 observer.observe(adEl, { attributes: true });
-            });*/
+            });
         }
     </script>
+    -->
 </div>
 
 
@@ -2005,6 +2010,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
     }
 
     // Check if character has persona5 or persona3 property and update ads visibility
+    /*
     function updateAdsForPersona5(characterName) {
         try {
             const character = characterData[characterName];
@@ -2053,7 +2059,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             console.warn('광고 업데이트 중 오류 발생:', error);
             // 오류가 발생해도 다른 기능에 영향을 주지 않도록 함
         }
-    }
+    }*/
 
 
     // Load character list when the page loads
