--- a/apps/revelations/index.html
+++ b/apps/revelations/index.html
@@ -25,9 +25,10 @@ jp: /revelations/?lang=jp
 <!-- Main content -->
 <div class="main-wrapper">
     <!-- 언어 안내 메시지 -->
+    <!--
     <div id="language-notice" class="language-notice" style="display: none;">
         <p id="language-notice-text"></p>
-    </div>
+    </div>-->
 
     <!-- Navigation path -->
     <div class="navigation-path">
