--- a/apps/wonder-weapon/index.html
+++ b/apps/wonder-weapon/index.html
@@ -23,9 +23,10 @@ jp: /wonder-weapon/?lang=jp
 {% endif %}
 
 <div class="main-wrapper">
+  <!--
   <div id="language-notice" class="language-notice" style="display: none;">
     <p id="language-notice-text"></p>
-  </div>
+  </div>-->
 
   <div class="navigation-path">
     <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
