--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -28,9 +28,10 @@ jp: /persona/?lang=jp
     <script src="{{ site.baseurl }}/assets/js/ad-injector.js?v={{ site.time | date: '%s' }}"></script>
     <script src="{{ site.baseurl }}/apps/persona/getfrom.js?v={{ site.time | date: '%s' }}"></script>
     <!-- 언어 안내 메시지 -->
+    <!--
     <div id="language-notice" class="language-notice" style="display: none;">
         <p id="language-notice-text"></p>
-    </div>
+    </div>-->
 
     <div class="navigation-path">
         <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
