--- a/index.html
+++ b/index.html
@@ -108,11 +108,19 @@ jp: /?lang=jp
             <h2 id="popular-characters-title">인기 괴도</h2>
             <div class="character-cards">
                 <div class="character-card">
+                    <div class="character-card-img"><a href="./character.html?name=쇼키·암야&v=' + APP_VERSION"
+                            style="text-decoration: none; color: inherit;"><img
+                                src="{{ site.baseurl }}/assets/img/tier/쇼키·암야.webp" alt="쇼키·암야"></a></div>
+                    <div class="character-card-text">
+                        <p>이케나미 쇼키·암야</p>
+                    </div>
+                </div>
+                <div class="character-card">
                     <div class="character-card-img"><a href="./character.html?name=후카&v=' + APP_VERSION"
                             style="text-decoration: none; color: inherit;"><img
                                 src="{{ site.baseurl }}/assets/img/tier/후카.webp" alt="후카"></a></div>
                     <div class="character-card-text">
-                        <p>후카</p>
+                        <p>야마기시 후카</p>
                     </div>
                 </div>
                 <div class="character-card">
@@ -120,23 +128,15 @@ jp: /?lang=jp
                             style="text-decoration: none; color: inherit;"><img
                                 src="{{ site.baseurl }}/assets/img/tier/미츠루.webp" alt="미츠루"></a></div>
                     <div class="character-card-text">
-                        <p>미츠루</p>
+                        <p>키리조 미츠루</p>
                     </div>
                 </div>
                 <div class="character-card">
-                    <div class="character-card-img"><a href="./character.html?name=YUI·스텔라&v=' + APP_VERSION"
+                    <div class="character-card-img"><a href="./character.html?name=카타야마&v=' + APP_VERSION"
                             style="text-decoration: none; color: inherit;"><img
-                                src="{{ site.baseurl }}/assets/img/tier/YUI·스텔라.webp" alt="YUI·스텔라"></a></div>
+                                src="{{ site.baseurl }}/assets/img/tier/카타야마.webp" alt="카타야마"></a></div>
                     <div class="character-card-text">
-                        <p>YUI·스텔라</p>
-                    </div>
-                </div>
-                <div class="character-card">
-                    <div class="character-card-img"><a href="./character.html?name=미유·여름&v=' + APP_VERSION"
-                            style="text-decoration: none; color: inherit;"><img
-                                src="{{ site.baseurl }}/assets/img/tier/미유·여름.webp" alt="미유·여름"></a></div>
-                    <div class="character-card-text">
-                        <p>미유·여름</p>
+                        <p>카타야마 쿠미</p>
                     </div>
                 </div>
                 <div class="character-card">
@@ -148,11 +148,11 @@ jp: /?lang=jp
                     </div>
                 </div>
                 <div class="character-card">
-                    <div class="character-card-img"><a href="./character.html?name=마유미&v=' + APP_VERSION"
+                    <div class="character-card-img"><a href="./character.html?name=이치고&v=' + APP_VERSION"
                             style="text-decoration: none; color: inherit;"><img
-                                src="{{ site.baseurl }}/assets/img/tier/마유미.webp" alt="마유미"></a></div>
+                                src="{{ site.baseurl }}/assets/img/tier/이치고.webp" alt="이치고"></a></div>
                     <div class="character-card-text">
-                        <p>하시모토 마유미</p>
+                        <p>시카노 이치고</p>
                     </div>
                 </div>
             </div>
