--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -226,6 +226,11 @@ jp: /persona/?lang=jp
                         <img src="{{ site.baseurl }}/assets/img/persona/persona-grade8.webp" alt="8등급">
                         <span></span>
                     </label>
+                    <label>
+                        <input type="checkbox" name="grade" value="9">
+                        <img src="{{ site.baseurl }}/assets/img/persona/persona-grade9.webp" alt="9등급">
+                        <span></span>
+                    </label>
                 </div>
             </div>
         </div>
